Fixes for random json function (#48)
When json column value has to be inserted, the?  in prepared statement should have a json suffix - ?::JSON

Made changes to support it