@@ -10,31 +10,22 @@ import java.util.List;
 public class RandomJson implements BaseUtil {
 
     protected int fields;
-    protected int nestedness;
-    protected Object valueType;
     protected int valueLength;
-
+    protected int nestedness;
 
     public RandomJson(List<Object> values) {
-        if (values.size() != 4) {
+        if (values.size() < 2) {
             throw new RuntimeException("Incorrect number of parameters for util function "
                 + this.getClass());
         }
-        this.fields = ((Number) (int) values.get(0)).intValue();
-        this.nestedness = ((Number) (int) values.get(1)).intValue();
-        this.valueType = values.get(2);
-        this.valueLength = ((Number) (int) values.get(3)).intValue();
+        this.fields = (int)values.get(0);
+        this.valueLength = (int)values.get(1);
+        if (values.size() > 2)
+            this.nestedness = (int)values.get(2);
     }
 
     public RandomJson(List<Object> values, int workerId, int totalWorkers) {
-        if (values.size() != 4) {
-            throw new RuntimeException("Incorrect number of parameters for util function "
-                + this.getClass());
-        }
-        this.fields = ((Number) (int) values.get(0)).intValue();
-        this.nestedness = ((Number) (int) values.get(1)).intValue();
-        this.valueType = values.get(2);
-        this.valueLength = ((Number) (int) values.get(3)).intValue();
+        this(values);
     }
 
     @Override
@@ -42,14 +33,7 @@ public class RandomJson implements BaseUtil {
         NoSuchMethodException, InstantiationException, IllegalAccessException {
         JSONObject outer = new JSONObject();
         for (int i = 0; i < fields; i++) {
-            // JSONObject inner = new JSONObject();
-            if (valueType.getClass().equals(String.class)) {
-                outer.put(Integer.toString(i), new RandomStringAlphabets(Collections.singletonList(valueLength)).run());
-            } else if (valueType.getClass().equals(Integer.class)) {
-                outer.put(Integer.toString(i), new RandomStringNumeric(Collections.singletonList(valueLength)).run());
-            } else if (valueType.getClass().equals(Boolean.class)) {
-                outer.put(Integer.toString(i), new RandomBoolean(List.of()).run());
-            }
+            outer.put(Integer.toString(i), new RandomStringAlphabets(Collections.singletonList(valueLength)).run());
         }
         return outer.toString();
     }
